@startuml

title Domain Model - Software de Gestão de Pilotos de Automobilismo

class Piloto {
  -id        : int
  -nome      : string
  -dataNasc  : string
  -nLicenca  : string
}

class Equipa {
  -id    : int
  -nome  : string
  -pais  : string
}

class Veiculo {
  -id        : int
  -modelo    : string
  -matricula : string
  -ano       : int
}

class Corrida {
  -id        : int
  -nome      : string
  -circuito  : string
  -data      : string
}

class Participacao {
  -posição   : int
  -tempo     : float
  -pontos    : int
}

' Associative class breaking Piloto <-> Corrida many-to-many
' Participacao is the associative class

' Relations
Equipa  "1"    --  "0..*"  Piloto      : contém
Equipa  "1"    --  "0..*"  Veiculo     : possui

Piloto  "1"    --  "0..*"  Participacao
Corrida "1"    --  "0..*"  Participacao

Participacao "0..*" --> "1" Piloto
Participacao "0..*" --> "1" Corrida

@enduml